# Phantasy

./: .gitignore  Cargo.toml  Run-Example.ps1
crates/phantasy-init/: Cargo.toml
crates/phantasy-init/src/: lib.rs
crates/phantasy-spotify-api/: Cargo.toml
crates/phantasy-spotify-api/src/: bearer_token.rs  fetch.rs  get_track.rs  get_track_audio_features.rs  lib.rs  track.rs  track_audio_features.rs  track_id.rs  uri.rs
crates/phantasy-spotify-api/src/auth/: pkce.rs
examples/find_sample_usage/: Cargo.toml
examples/find_sample_usage/src/: main.rs
examples/get_track/: Cargo.toml
examples/get_track/src/: main.rs
src/: main.rs
test/: .song_ids
