[package]
name = "Phantasy"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
phantasy-spotify-api = { path = "./crates/phantasy-spotify-api" }
base64 = "0.22.1"
color-eyre = "0.6.3"
eyre = "0.6.12"
http = "1.3.1"
open = "5.3.2"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
url = "2.5.4"

[dependencies]
phantasy-spotify-api.workspace = true
color-eyre.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
