[package]
name = "phantasy-spotify-api"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
base64.workspace = true
sha2.workspace = true
url.workspace = true
open.workspace = true
reqwest.workspace = true
rand.workspace = true
dotenvy.workspace = true
