[package]
name = "find_sample_usage"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
phantasy-init.workspace = true
# For OGG decoding:
lewton = "0.10.2"
# For reading/writing WAV if you prefer that route:
hound = "3.4"
# For array manipulation:
ndarray = "0.15"
ndarray-stats = "0.6"
rustfft = "6.2.0"
# If you want log-scale or Mel filter banks, consider "realfft" or "speech-processing" crates